--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.7",
+    "save": "^2.4.0",
+    "vant": "^2.5.9",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
