--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
     "save": "^2.4.0",
