--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "mongoose": "^5.9.7",
     "save": "^2.4.0",
     "vant": "^2.5.9",
