--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "save": "^2.4.0",
     "vant": "^2.5.9",
